--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13191,12 +13191,12 @@ a.active {
 }
 
 .nav-header .logo-abbr {
-  max-width: 52px;
+  max-width: 55%;
 }
 
 @media only screen and (max-width: 575px) {
   .nav-header .logo-abbr {
-    max-width: 40px;
+    max-width: 55%;
   }
 }
 
