--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33772,7 +33772,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
   width: 100%;
 }
 .hover-decoration:hover {
- 
+ cursor: pointer;
   text-decoration: underline;
 }
 .profile .profile-photo {
